After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 620065 - Several problems related to recent files
Several problems related to recent files
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkRecent
2.20.x
Other Linux
: Normal minor
: ---
Assigned To: gtk-bugs
Emmanuele Bassi (:ebassi)
Depends on:
Blocks:
 
 
Reported: 2010-05-30 03:32 UTC by tpgww
Modified: 2016-04-10 17:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
compressed diff (1023 bytes, patch)
2010-05-30 03:32 UTC, tpgww
none Details | Review

Description tpgww 2010-05-30 03:32:58 UTC
Created attachment 162289 [details] [review]
compressed diff

1. It's not possible to use a non-default, or multiple, manager(s), because the relevant value is ignored (NULL is set, effectively invoking the default). I need to use 2 of them at once, for different types of recent-file.

2. There's no need to spit a warning message when merely checking to see if there's any item in a recent-manager, before any such content was actually added.

3. Inappropriate error domain and message upon failure to move a file.

4. Several minor reconciliations and cleanups.

The attached patch deals with these things. It was made against 2.18.7 and has also been applied without fuzz to 2.20.1
Comment 1 Emmanuele Bassi (:ebassi) 2016-04-10 17:43:26 UTC
Sorry for the delay.

The code has changed very much in the last 6 years. I've tried to incorporate some of the still valid changes.

It would have helped processing this bug much quicker if you:

 * attached the individual patches instead of having a combined one, zipped
 * explicitly described each patch

As a quick answer:

 1. yes, that's a bug
 2. the use of GError is generally borked in GtkRecentManager, according to the best coding practices. I was young and didn't really understand the API. On the other hand, for consistency, if the lookup returns a GError if the URI is not available then it should also return an error if there is no bookmark file.
 3. yes, that's a bug
 4. those are largely unnecessary

Again, thanks for the patch and sorry for the wait.